# moran

./: LICENCE  README.md  pyproject.toml
moran/: asrn.py  moran.py  morn.py  utils.py
moran/utils/: attention.py  fractional_pickup.py
tests/: test_moran.py
