[tool.poetry]
name = "moran"
version = "0.1.0"
description = "MORAN: A Multi-Object Rectified Attention Network for Scene Text Recognition, implemented in tf.keras"
authors = ["Sasha Illarionov <sasha@sdll.space>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^1.14"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
